tests/002-03-invalid-file-p7s.out
Fatal error: Invalid File. in /home/php-src/ext/openssl_pkcs/tests/002-03-invalid-file-p7s.php on line 3