tests/002-03-invalid-file-p7s.php
<?php
try { 
    $p7s = new Openssl\P7s('tests/001.phpt');
} catch (Exception $e) {
    echo 'exception throwed';
}
